changed flex direction inside card description to column and changed flex grow from 100% to 1 to get content to align correctly.

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -21,7 +21,7 @@
 .cardDescription {
   /* display, flex-direction, align-items, flex-grow */
   padding: 15px 0;
-  display: flex; flex-direction: row; justify-content: center; align-items: center;flex-grow:100%
+  display: flex; flex-direction: column; align-items: flex-start; flex-grow: 1;
 }
 
 html {
